// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should display custom message 1`] = `
<form class="gov-form gov-form-horizontal">
  <div class="gov-row gov-form-item gov-form-item-with-help">
    <div class="gov-form-item-label"><label for="account" title="Account" class="">Account</label></div>
    <div class="gov-form-item-control-wrapper">
      <div class="gov-form-item-control has-error"><span class="gov-form-item-children"><input data-__meta="[object Object]" data-__field="[object Object]" id="account" class=""></span>
        <div class="gov-form-explain"><span class="">Account does not exist, <a rel="noopener noreferrer" href="https://www.alipay.com/" target="_blank">Forgot account?</a></span></div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form should display two message 1`] = `
<form class="gov-form gov-form-horizontal">
  <div class="gov-row gov-form-item gov-form-item-with-help">
    <div class="gov-form-item-label"><label for="account" title="Account" class="">Account</label></div>
    <div class="gov-form-item-control-wrapper">
      <div class="gov-form-item-control has-error"><span class="gov-form-item-children"><input data-__meta="[object Object]" data-__field="[object Object]" id="account" class=""></span>
        <div class="gov-form-explain">Error message 1 Error message 2</div>
      </div>
    </div>
  </div>
</form>
`;
